fix: improve formatting and spacing in HTML and CSS files for better readability

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");
-@import './ScrollToTop.css';
+@import "./ScrollToTop.css";
 
 :root {
 	--bg-color: #333333;
@@ -22,16 +22,15 @@ body {
 .spacer {
 	height: 30vh;
 	display: flex;
-	flex-direction:column;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
-	line-height:0.1em;
+	line-height: 0.1em;
 
 	h1 {
-	
 		display: block;
 	}
 
@@ -126,15 +125,17 @@ body {
 			display: inline-block;
 			width: 5px;
 			height: 5px;
+			background-color: var(--highlight-reveal);
+			margin-top: 10px;
+			margin-bottom: 0px;
+			margin-left: 6px;
+
 			background-image: linear-gradient(
 				to right,
 				var(--highlight-reveal, #ffd600) 0%,
 				var(--highlight-reveal, #ffd600) var(--dot-active-x, 0%),
 				var(--reveal-inactive) var(--dot-active-x, 0%)
 			);
-			margin-top: 10px;
-			margin-bottom: 0px;
-			margin-left: -6px;
 		}
 	}
 }
